<resources>
    <string name="app_name">ActionBarText</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="weather">Weather</string>

    <string name="action_compose">Compose</string>
    <string name="action_delete">Delete</string>

    <string name="action_search">Search</string>
    <string name="action_expand">On Expand</string>
    <string name="action_collapse">Collapse</string>

    <string name="action_share">Share</string>
    <string name="cart">Cart</string>
    <string name="house">House</string>

    <string name="artist">Artist</string>
    <string name="album">Album</string>

</resources>
