<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>

    <item
        android:id="@+id/action_share"
        android:actionProviderClass="com.zheng.actionbartext.MyActionProvider"
        android:icon="@drawable/share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>

    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_action_compose"
        android:showAsAction="always"
        android:title="@string/action_compose"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="always"
        android:title="@string/action_delete"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/settings"
          app:showAsAction="never"/>

</menu>
